Code coverage reporting files

--- a/.coveragerc
+++ b/.coveragerc
@@ -3,10 +3,8 @@ branch = True
 source = dpest
 omit =
     tests/*
-    */__init__.py
-    dpest/arguments.yml  # Exclude non-Python files
-    dpest/wheat/arguments.yml
-    dpest/wheat/ceres/arguments.yml
+    **/__init__.py
+    **/arguments.yml  # Exclude non-Python files
 
 [report]
 show_missing = True
