--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,22 +5,22 @@
 #  test:
 #    runs-on: ubuntu-latest
 #    steps:
-#    - uses: actions/checkout@v4
+#      - uses: actions/checkout@v4
 #
-#    - name: Set up Python 3.10
-#      uses: actions/setup-python@v4
-#      with:
-#        python-version: "3.10"
+#      - name: Set up Python 3.10
+#        uses: actions/setup-python@v4
+#        with:
+#          python-version: "3.10"
 #
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install dpest
-#        pip install pytest
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install dpest
+#          pip install -e .[dev]
 #
-#    - name: Run tests
-#      run: |
-#        pytest tests/ -v
+#      - name: Run unit tests
+#        run: |
+#          pytest tests/ -v
 
 name: Tests
 on: [push, pull_request]
@@ -39,8 +39,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install dpest
-          pip install -e .[dev]
+          # Install test/dev dependencies (pytest, etc.)
+          python -m pip install -e .[dev]
 
       - name: Run unit tests
         run: |
