--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,27 +1,3 @@
-#name: Tests
-#on: [push, pull_request]
-#
-#jobs:
-#  test:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#
-#      - name: Set up Python 3.10
-#        uses: actions/setup-python@v4
-#        with:
-#          python-version: "3.10"
-#
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install dpest
-#          pip install -e .[dev]
-#
-#      - name: Run unit tests
-#        run: |
-#          pytest tests/ -v
-
 name: Tests
 on: [push, pull_request]
 
@@ -36,12 +12,11 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies from local project
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # IMPORTANT: do NOT install the published dpest here
-          # pip install dpest
-          python -m pip install -e .[dev]
+          pip install dpest
+          pip install -e .[dev]
 
       - name: Run unit tests
         run: |
