--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,4 @@ PEST_COMANDS_NEW_RELEASE.txt
 docs/conf_copy.py
 dpest/create_folders.py
 dpest/wheat/ceres/ceres.py
-dpest/dpest/test.py
+dpest/test.py
